# dm_app

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  app.c  gui.c  gui.h  main.c  main.m  post_build.bat  post_build.sh
assets/shaders/: gui_pixel.hlsl  gui_pixel.metal  gui_vertex.hlsl  gui_vertex.metal  pixel.hlsl  pixel_shader.metal  vertex.hlsl  vertex_shader.metal
